WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34659
[chromium] webgl shouldn't hard code library search path
https://bugs.webkit.org/show_bug.cgi?id=34659
Summary
[chromium] webgl shouldn't hard code library search path
Evan Martin
Reported
2010-02-05 13:29:10 PST
[chromium] webgl shouldn't hard code library search path
Attachments
Patch
(2.58 KB, patch)
2010-02-05 13:30 PST
,
Evan Martin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Evan Martin
Comment 1
2010-02-05 13:30:08 PST
Created
attachment 48253
[details]
Patch
Kenneth Russell
Comment 2
2010-02-05 13:47:40 PST
Looks good to me, but I'm not a WebKit reviewer. CC'ing Oliver Hunt (who is) and Chris Marrin.
Kenneth Russell
Comment 3
2010-02-05 13:48:58 PST
***
Bug 33032
has been marked as a duplicate of this bug. ***
Evan Martin
Comment 4
2010-02-05 13:50:02 PST
Wow, I have no recollection of filing that other bug, heh.
Kenneth Russell
Comment 5
2010-02-05 13:50:55 PST
(In reply to
comment #4
)
> Wow, I have no recollection of filing that other bug, heh.
Well, thanks for picking this up. I haven't had time to touch the Linux port recently.
WebKit Commit Bot
Comment 6
2010-02-08 19:05:42 PST
Comment on
attachment 48253
[details]
Patch Clearing flags on attachment: 48253 Committed
r54524
: <
http://trac.webkit.org/changeset/54524
>
WebKit Commit Bot
Comment 7
2010-02-08 19:05:50 PST
All reviewed patches have been landed. Closing bug.
David Levin
Comment 8
2010-02-08 21:21:31 PST
Just saw this get committed and noticed no reviewer line. In the future, please leave the "Reviewed by NOBODY (OOPS)" line in the changelog. (This is also my mistake for not catching this when I gave you the r+ :S.)
Evan Martin
Comment 9
2010-02-09 11:07:30 PST
Gah, I'm sorry, I must've deleted the line in my ChangeLog accidentally.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug